# muonevals

./: .gitignore  .gitmodules  Makefile  README.md  SCORING_ANALYSIS.md  best.tsv  conftest.py  program.md  pyproject.toml  run_autoresearch.py  worst.tsv
muonevals/: __init__.py  _muonledger_path.py  eval.py  export.py  ledger.py  reports.py  runner.py  scorers.py  ticket.py
requirement/: feedback.md  muon_autoresearch_sudoku.md
sudoku/: __init__.py  autoresearch.py  best.py  config.py  configurable_solver.py  dataset.py  evaluate.py  experiment.py  results.py  solver.py  strategies.py
tests/: test_autoresearch.py  test_configurable_solver.py  test_dataset.py  test_eval.py  test_evaluate.py  test_experiment.py  test_export.py  test_ledger.py  test_reports.py  test_results.py  test_runner.py  test_scorers.py  test_strategies.py  test_sudoku.py  test_ticket.py
tickets/: T-000002.md  T-000003.md  T-000004.md  T-000005.md  T-000006.md  T-000007.md  T-000008.md  T-000009.md  T-000010.md  T-000011.md  T-000012.md  T-000013.md  T-000014.md  T-000015.md  T-000017.md  T-000018.md  T-000019.md  T-000021.md  T-000023.md  T-000024.md  last_ticket_id
tickets/archive/: T-000002.md  T-000003.md  T-000005.md  T-000006.md  T-000009.md  T-000011.md  T-000016.md  T-000020.md  T-000022.md  T-000024.md
